# GitFlow

./: .eslintrc.json  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start.sh  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
docs/: index.md  usage.md
gitflow-spotlight-v1/: README.md  package-mac.sh  package.json
gitflow-spotlight-v1/assets/: icon.icns
gitflow-spotlight-v1/src/: main.js  preload.js  renderer.js  styles.css
src/: main.js  preload.js  renderer.html  renderer.js
tests/: test_gitflow.py
