[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitflow-cli"
version = "0.1.0"
description = "A simple and powerful GitHub CLI helper tool"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Basil Shaji", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama",
    "inquirer",
]

[project.scripts]
gitflow = "gitflow.cli:main"

[tool.setuptools]
packages = ["gitflow"]
include-package-data = true
